--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socializator",
+  "name": "galaxyguardianportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +7,16 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "lodash": "^4.17.21",
+    "node-sass": "^5.0.0",
+    "react": "^16.0.2",
+    "react-dom": "^16.0.2",
     "react-scripts": "4.0.3",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "sass": "node-sass -w scss/ -o src/css/ --recursive",
     "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
