--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://obvadov.github.io/homepage/",
   "name": "galaxyguardianportfolio",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "sass": "node-sass -w scss/ -o src/css/ --recursive",
     "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "gh-pages": "^3.1.0"
   }
 }
